--- a/notebooks/OSPGR.ipynb
+++ b/notebooks/OSPGR.ipynb
@@ -4,20 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'covariances' from partially initialized module 'osvgp' (most likely due to a circular import) (/Users/oskar/source/python/orthogonal-SVGP/notebooks/../osvgp/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m/Users/oskar/source/python/orthogonal-svgp/notebooks/OSPGR.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oskar/source/python/orthogonal-svgp/notebooks/OSPGR.ipynb#ch0000000?line=9'>10</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow_probability\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtfp\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oskar/source/python/orthogonal-svgp/notebooks/OSPGR.ipynb#ch0000000?line=10'>11</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/oskar/source/python/orthogonal-svgp/notebooks/OSPGR.ipynb#ch0000000?line=12'>13</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mosvgp\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mimport\u001b[39;00m OSGPR\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oskar/source/python/orthogonal-svgp/notebooks/OSPGR.ipynb#ch0000000?line=14'>15</a>\u001b[0m rng \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mRandomState(\u001b[39m69\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/oskar/source/python/orthogonal-svgp/notebooks/OSPGR.ipynb#ch0000000?line=15'>16</a>\u001b[0m tf\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mset_seed(\u001b[39m69\u001b[39m)\n",
-      "File \u001b[0;32m~/source/python/orthogonal-SVGP/notebooks/../osvgp/__init__.py:1\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m (covariances, models, plotting)\n\u001b[1;32m      2\u001b[0m __all__ \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mcovariances\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mmodels\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mplotting\u001b[39m\u001b[39m\"\u001b[39m,]\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'covariances' from partially initialized module 'osvgp' (most likely due to a circular import) (/Users/oskar/source/python/orthogonal-SVGP/notebooks/../osvgp/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import time\n",
@@ -28,7 +15,7 @@
     "import gpflow\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "import tensorflow_probability as tfp\n",
+    "# import tensorflow_probability as tfp\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from osvgp.models import OSGPR\n",
@@ -158,8 +145,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-21 11:47:50.505954: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n",
-      "2022-07-21 11:47:51.350075: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2022-07-21 16:03:41.149321: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n",
+      "2022-07-21 16:03:42.142485: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
